[gd_scene load_steps=8 format=3 uid="uid://cu8ahwtf1pm7r"]

[ext_resource type="Script" uid="uid://c7c1e1mle6ar6" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dknd7gubyg1nx" path="res://player/player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ca51edxnqtj8j" path="res://coins/coin_tornillo.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://digb3l1h7pxnc" path="res://enemy/Scrap.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://hrvgga7e5t7e" path="res://UI/hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://bqmcpihejhoys" path="res://pixel-song-21-72593.mp3" id="6_7mycd"]

[sub_resource type="Curve2D" id="Curve2D_h2yge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 32, 0, 0, 0, 0, 0, 448, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
coins_scene = ExtResource("3_h2yge")
scrap_scene = ExtResource("3_lquwl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 726.0
color = Color(0.257806, 0.335248, 0.782472, 1)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(0, 4)
scale = Vector2(4.5, 4.5)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(261, 602)

[node name="ScrapTimer" type="Timer" parent="."]
wait_time = 0.323

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 3.144

[node name="CoinsPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_h2yge")

[node name="CoinsSpawnLocation" type="PathFollow2D" parent="CoinsPath"]
position = Vector2(32, 0)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7mycd")

[connection signal="catch" from="Player" to="." method="catch_object"]
[connection signal="timeout" from="ScrapTimer" to="." method="_on_ScrapTimer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_Coin_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
